<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="#9CCDE3"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correct_answer"
        android:id="@+id/textView1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        android:padding="30dp">
    </TextView>
    <TextView
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id= "@+id/txtRightAnswer"
        android:textStyle="bold"
        android:text="@string/textview2"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:textSize="35sp"
        android:padding="10dp">
    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <TextView
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="35sp"
            android:padding="10dp"
            android:id="@+id/txtRandom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Random Text"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp">
        <EditText
            android:id="@+id/etUserInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="40sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:inputType="textPersonName"
            android:hint="@string/enter_your_text"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/show"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/check"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>